--- a/css/style.css
+++ b/css/style.css
@@ -343,3 +343,7 @@ a:hover {
   border-top: 1px solid #e4e4e4;
   background: linear-gradient(to top, #f9f9f9, #fff);
 }
+/* Centralizar títulos principais */
+h1, h2 {
+  text-align: center;
+}
