--- a/css/style.css
+++ b/css/style.css
@@ -488,3 +488,7 @@ iframe{ border-radius:10px; width:100%; height:400px; border:0; }
 
 
 }
+/* já tinhas a definição .cookie-banner; mantém-na */
+.cookie-banner.hidden { 
+  display: none !important;
+}
